Update screenshot format and hide ssid in waybar

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -232,7 +232,7 @@ binde = , XF86AudioLowerVolume, exec, pactl set-sink-volume @DEFAULT_SINK@ -5%
 bind = , XF86AudioMute, exec, pactl set-sink-mute @DEFAULT_SINK@ toggle
 bind = , XF86AudioMicMute, exec, pactl set-source-mute @DEFAULT_SOURCE@ toggle
 
-# Screenshot
-bind = $mainMod, Print, exec, grim ~/Pictures/screenshots/Screenshot-$(date +%Y-%m-%d-%H-%M-%S).png
-bind = $mainMod SHIFT, Print, exec, grim -g "$(slurp)" ~/Pictures/Screenshots/screenshot-$(date +%Y-%m-%d-%H-%M-%S).png
+# Screenshot TODO notify
+bind = $mainMod, Print, exec, grim ~/Pictures/Screenshots/Screenshot-$(date +%Y-%m-%d_%H-%M-%S).png
+bind = $mainMod SHIFT, Print, exec, grim -g "$(slurp)" ~/Pictures/Screenshots/Screenshot-$(date +%Y-%m-%d_%H-%M-%S).png
 
